force-app/main/default/objects/WorkOrder/fields/FSL__Prevent_Geocoding_For_Chatter_Actions__c.field-meta.xml
<CustomField>
    <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Geocoding For Chatter Actions</label>
    <type>Checkbox</type>
</CustomField>