force-app/main/default/objects/WorkOrder/fields/FSL__Scheduling_Priority__c.field-meta.xml
<CustomField>
    <fullName>FSL__Scheduling_Priority__c</fullName>
    <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduling Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>