force-app/main/default/objects/WorkOrder/fields/FSL__VisitingHours__c.field-meta.xml
<CustomField>
    <fullName>FSL__VisitingHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visiting Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>